--- a/docs/doc.css
+++ b/docs/doc.css
@@ -7,14 +7,23 @@ body {
 
 h1 {
   margin-left: -0.2in;
+  margin-right: 0.3in;
+  margin-top: 0.5in;
+  margin-bottom: 0.3in;
   font-size: 14pt;
+  background-color:#ffcc99;
 }
 h2 {
   margin-left: -0in;
+  margin-right: 0.3in;
+  margin-top: 0.3in;
+  margin-bottom: 0.2in;
   font-size: 12pt;
+  background-color:#e0e0e0;
 }
 h3 {
-  margin-left: -0in;
+  margin-left: 0.1in;
+  font-size: 11pt;
 }
 h4 {
   margin-left: -0in;
@@ -27,6 +36,7 @@ hr {
 dt {
   font-weight: bold;
 }
+
 
 address {
   text-align: center;
@@ -42,8 +52,9 @@ div.note p {
   width: 3in;
   margin-right: 0%;
   padding: 1px;
-  border: 2px solid #6060a0;
+  border: 1px solid #6060a0;
   background-color: #fffff0;
+  line-height: 1.5em;
 }
 
 ul {
@@ -62,28 +73,35 @@ UL.nobullets {
   margin-left: -1em;
 }
 
-p {
-  margin: 1em 0 1em 0;
-  padding: 0 0 0 0;
-}
+/* p { */
+/*   margin: 1em 0 1em 0; */
+/*   padding: 0 0 0 0; */
+/* } */
+
 
 pre {
   line-height: 1.3em;
   padding: 0.4em 0 0.8em 0;
-  margin:  0 0 0 0;
-  border:  0 0 0 0;
+  margin: 0 0 0 0;
+  border: 0 0 0 0;
   color: blue;
 }
 
 .datatable {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2em;
-  margin-bottom: 2em;
-  border: 1px solid;
+  margin-top: -0.1in;
+  margin-bottom: 0.1in;
+  margin-left: 0.1in;
+  width: 1100px;
+  border: 0px;
+  border-collapse: collapse;
 }
 
-.datatable td,th {
+.datatable.tab1 { table-layout: fixed; background: #f6f6f6; text-align: center; vertical-align: top;}
+.datatable.tab2 { table-layout: auto; background: #ffdff9; text-align: left; vertical-align: top;}
+
+td,th {
   padding: 0 0.5em 0 0.5em;
-  text-align: right;
+  border: 1px  #c8c8c8 solid;
 }
+    
+
