Update trinity.js to introduce colorbar to gmm demo

--- a/demo/css/trinity.css
+++ b/demo/css/trinity.css
@@ -9,3 +9,15 @@
    font-family: sans-serif;
    font-size: 11px;
 }
+
+.colorbar-axis path,
+.colorbar-axis line {
+   fill: none;
+   stroke: black;
+   shape-rendering: crispEdges;
+}
+
+.colorbar-axis text {
+   font-family: sans-serif;
+   font-size: 11px;
+}
